Issue #1426844 by Bastlynn: Adding catch re: propery of last_history object being empty when node is not a workflow content type.
Issue #1424008 by Bastlynn: Accounting for trying to go to views pg with workflow_views active, but no workflows in system.
Issue #1400352 by Bastlynn: Fixing an error appearing udner E_STRICT in admin UI re: creating a default object.
Something got wierd betwen the push/pull for this commit so trying that again.
Issue #1386430 by dylanhuang (patch by dozymoe): Views filter shows unknown when state selected in multi-workflow environment.
Issue #1386430 by dylanhuang (patch by dozymoe): Views filter shows unknown when state selected in multi-workflow environment.
Correcting for doubled ,, in install schema.
Issue #1405688 by wonder95: Path length correction for trigger path.
Issue #1405688 by hefox: Coder standards.
Issue #1924004 by evaldas.uzkuras: Fix bad variable.
Fix typo in api. Add hook_requirements to show that worflows are active.
Issue #1924174 by NancyDru: Fix menu error on state delete.
Issue 1925162 by fgm: Call time reference error.
Issue #1924182 by NancyDru: Correct initial state name in edit form.
Issue #1926746 by shenzhuxi: Fix some php warnings.
Issue #1781308 by NancyDru: Change node form to vertical tab.
Issue #1926556 by NancyDru: Back to transition on node creation.
Issue #1550992 by chadhester: Add Previous Comment Author for Views.
Issue #1926800 by NancyDru: Fix operations links.
Issue #1865754 by NancyDru for leelooch: Add reminder to state add form.
Issue #1540412 by NancyDru: Allow timezones for transition scheduling.
Issue #1930638 by NancyDru, shenzhuxi: Undefined variable.
Issue #1540824 by NancyDru: Improve Admin UI.
Issue #1931032 by NancyDru: Add missing js file.
Issue #1931778 by NancyDru: Add breadcrumbs to access page.
Add admin ui css.
Issue #1350900 by loze: list states grouped by workflow.
Issue #1540824 by NancyDru: More Admin UI improvements.